--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,11 @@ project(raytracer)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(raytracer main.cpp
-        simpleTexture.cpp)
+        main.cpp
+        Ray.h
+        Vector3.h
+        Sphere.h
+        Camera.cpp
+        Camera.h
+        World.cpp
+        World.h)
